Problem with the Grease Pencil Fill Tool #66376

Closed
opened 2019-07-03 14:56:22 +02:00 by Thomas Kress · 15 comments

System Information
Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits
Graphics card: NVIDIA GeForce GTX 780M OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-12.0.23 355.11.10.50.10.103

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-02 22:33, hash: 50ccbe6bb2
Worked: (optional)

Short description of error
Grease Pencil Fill Tool not working properly

Exact steps for others to reproduce the error

  • added a drawing of a head with no visible gaps
  • added a new Grease Pencil Layer for the coloring process
  • take the Fill Tool and trying to fill the area of the skin with no success
  • trying different settings with no success (Default, visible Strokes etc.)

fill.mov

cleanup.blend

**System Information** Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits Graphics card: NVIDIA GeForce GTX 780M OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-12.0.23 355.11.10.50.10.103 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-02 22:33, hash: `50ccbe6bb2` Worked: (optional) **Short description of error** Grease Pencil Fill Tool not working properly **Exact steps for others to reproduce the error** - added a drawing of a head with no visible gaps - added a new Grease Pencil Layer for the coloring process - take the Fill Tool and trying to fill the area of the skin with no success - trying different settings with no success (Default, visible Strokes etc.) [fill.mov](https://archive.blender.org/developer/F7563910/fill.mov) [cleanup.blend](https://archive.blender.org/developer/F7563925/cleanup.blend)
Author

Added subscriber: @tkress

Added subscriber: @tkress

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Antonio Vazquez was assigned by Germano Cavalcante 2019-07-03 15:47:29 +02:00

@antoniov, is it really a bug?

@antoniov, is it really a bug?

No, this is not a bug.

After testing the file, there is a special situation in the right lower part of the drawing. As the end of the stroke is projected to fill small gaps, in this situation is not closing the stroke totally. This is a limitation of the fill in a 3D space.

image.png

To fill, just move the point selected near of the horizontal line.

image.png

No, this is not a bug. After testing the file, there is a special situation in the right lower part of the drawing. As the end of the stroke is projected to fill small gaps, in this situation is not closing the stroke totally. This is a limitation of the fill in a 3D space. ![image.png](https://archive.blender.org/developer/F7564275/image.png) To fill, just move the point selected near of the horizontal line. ![image.png](https://archive.blender.org/developer/F7564287/image.png)

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

Since it is a known limitation and not a bug, closing.

Since it is a known limitation and not a bug, closing.
Author

In #66376#712289, @antoniov wrote:
No, this is not a bug.

After testing the file, there is a special situation in the right lower part of the drawing. As the end of the stroke is projected to fill small gaps, in this situation is not closing the stroke totally. This is a limitation of the fill in a 3D space.

image.png

To fill, just move the point selected near of the horizontal line.

image.png

In #66376#712408, @mano-wii wrote:
Since it is a known limitation and not a bug, closing.

That's it?
Imagine you have hundreds of drawings with thousands of lines and you have to do these kinds of checks and edits on every frame - you would go crazy.
I evaluated the 2D animation features for weeks now and I have to say that I can't use it in my production pipeline yet - too many quirks, workarounds and known limitations.
Thanks anyway for the effort and I hope that the developers will listen to professional 2D animators for future releases,
Thomas

> In #66376#712289, @antoniov wrote: > No, this is not a bug. > > After testing the file, there is a special situation in the right lower part of the drawing. As the end of the stroke is projected to fill small gaps, in this situation is not closing the stroke totally. This is a limitation of the fill in a 3D space. > > ![image.png](https://archive.blender.org/developer/F7564275/image.png) > > To fill, just move the point selected near of the horizontal line. > > ![image.png](https://archive.blender.org/developer/F7564287/image.png) > In #66376#712408, @mano-wii wrote: > Since it is a known limitation and not a bug, closing. That's it? Imagine you have hundreds of drawings with thousands of lines and you have to do these kinds of checks and edits on every frame - you would go crazy. I evaluated the 2D animation features for weeks now and I have to say that I can't use it in my production pipeline yet - too many quirks, workarounds and known limitations. Thanks anyway for the effort and I hope that the developers will listen to professional 2D animators for future releases, Thomas

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly

@CharlieJolly Could you take a look with this example file?

@CharlieJolly Could you take a look with this example file?

@tkress We are going to take a look to try to fix these problems. We are aware of these things, but as our resources are limited, we cannot fix all at the same time, so we work first in "big" issues, but of course we listen animators and try to solve all the problems.

Anyway, thanks for your report and for the example file that will help us to find a fix.

@tkress We are going to take a look to try to fix these problems. We are aware of these things, but as our resources are limited, we cannot fix all at the same time, so we work first in "big" issues, but of course we listen animators and try to solve all the problems. Anyway, thanks for your report and for the example file that will help us to find a fix.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

I have seen a possible bug here.

The fill material has an alpha > 0, but the show fill is disabled, but the fill tool is considered the fill as visible and the stroke is not drawing, so the fill area has a gap.

I have seen a possible bug here. The fill material has an alpha > 0, but the show fill is disabled, but the fill tool is considered the fill as visible and the stroke is not drawing, so the fill area has a gap.

This issue was referenced by d19d0ff99e

This issue was referenced by d19d0ff99e61a49a7a0178bc58ff258bab775f70

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@tkress Could you try with the build of tomorrow?

@tkress Could you try with the build of tomorrow?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66376
No description provided.